--- a/components:index.html
+++ b/components:index.html
@@ -173,10 +173,7 @@
           <h3 class="component__name">.section-heading</h3>
           <div class="component__img">
             <img
-              srcset="./img/section-heading@2x.png 2x"
-              src="./img/h4.png"
-              alt="section heading"
-            />
+              srcset="./img/case-study-section-contents.png" alt="section heading">
           </div>
           <div class="component__code">
             <h2 class="section-heading">
@@ -190,16 +187,16 @@
 
           <div class="component__img">
             <img
-              srcset="./img/action-link@2x.png 2x"
-              src="./img/action-link@2x.png"
+              srcset="./img/case-study-read-more.png"
+              src="./img/case-study-read-more.png"
               alt="action link"
             />
           </div>
           <div class="component__code">
-            <a href="#!" class="action-link">Play showreel</a>
+            <a href="#!" class="action-link">Learn more about the project</a>
           </div>
         </article>
-        <article id="icon--circle" class="component component--is-done">
+    <!--   <article id="icon--circle" class="component component--is-done">
           <h3 class="component__name">.icon--circle</h3>
           <div class="component__img">
             <img
@@ -213,7 +210,7 @@
               ><i class="fab fa-instagram"></i
             ></a>
           </div>
-        </article>
+        </article>--> 
       </section>
 
       <!-- page-header -->
@@ -225,19 +222,17 @@
           <h3 class="component__name">.page-header</h3>
           <div class="component__img">
             <img
-              srcset="./img/page-header@2x.png 2x"
-              src="./img/page-header@2x.png"
+              srcset="./img/header-organism.png"
               alt="page header"
             />
           </div>
           <div class="component__code">
             <header class="page-header">
               <h1 class="wordmark">
-                <span class="wordmark__line">Wolff</span>
-                <span class="wordmark__line">Olins</span>
+                <span class="wordmark__line">Pentagram</span>
               </h1>
               <nav>
-                <a href="#!" class="nav-toggle">Menu</a>
+                <a href="#!" class="nav-toggle">xxx</a>
               </nav>
             </header>
           </div>
@@ -252,8 +247,8 @@
 
           <div class="component__img">
             <img
-              srcset="./img/main-nav@2x.png 2x"
-              src="./img/main-nav@2x.png"
+              srcset="./img/nav-molecule.png"
+              src="./img/nav-molecule.png"
               alt="Main Nav"
             />
           </div>
@@ -263,8 +258,7 @@
               <ul class="main-nav__list">
                 <li><a href="#!">Work</a></li>
                 <li><a href="#!">About</a></li>
-                <li><a href="#!">Inside</a></li>
-                <li><a href="#!">Views</a></li>
+                <li><a href="#!">News</a></li>
                 <li><a href="#!">Contact</a></li>
               </ul>
             </nav>
@@ -276,8 +270,8 @@
 
           <div class="component__img">
             <img
-              srcset="./img/main-nav__list@2x.png 2x"
-              src="./img/main-nav__list@2x.png"
+              srcset="./img/nav-molecule.png"
+              src="./img/nav-molecule.png"
               alt="main nav"
             />
           </div>
@@ -285,8 +279,7 @@
             <ul class="main-nav__list">
               <li><a href="#!">Work</a></li>
               <li><a href="#!">About</a></li>
-              <li><a href="#!">Inside</a></li>
-              <li><a href="#!">Views</a></li>
+              <li><a href="#!">News</a></li>
               <li><a href="#!">Contact</a></li>
             </ul>
           </div>
@@ -302,32 +295,21 @@
           <h3 class="component__name">.cover-section</h3>
           <!-- <div class="component__img">
 							<img
-								srcset="./img/cover-section@2x.png 2x"
-								src="./img/cover-section@2x.png"
+								srcset="./img/cover-section-organism.png"
 							/>
 						</div> -->
           <div class="component__code">
             <article class="cover-section">
               <div class="cover-section__feature-media">
-                <img
-                  srcset="
-                    https://images.prismic.io/wolffolins/Yjg4NjQxMzMtNzY3ZS00MjU1LWJlZWMtMDlmMmFiNGQ0MDZk_sage_brain_zoom.gif?auto=compress,format&amp;rect=0,0,1600,900&amp;w=1365&amp;h=768  1365w,
-                    https://images.prismic.io/wolffolins/Yjg4NjQxMzMtNzY3ZS00MjU1LWJlZWMtMDlmMmFiNGQ0MDZk_sage_brain_zoom.gif?auto=compress,format                                             1600w,
-                    https://images.prismic.io/wolffolins/Yjg4NjQxMzMtNzY3ZS00MjU1LWJlZWMtMDlmMmFiNGQ0MDZk_sage_brain_zoom.gif?auto=compress,format&amp;rect=0,0,1600,900&amp;w=2560&amp;h=1440 2560w
-                  "
-                  src="https://images.prismic.io/wolffolins/Yjg4NjQxMzMtNzY3ZS00MjU1LWJlZWMtMDlmMmFiNGQ0MDZk_sage_brain_zoom.gif?auto=compress,format&amp;rect=0,0,1600,900&amp;w=1365&amp;h=768  1365w,
-									https://images.prismic.io/wolffolins/Yjg4NjQxMzMtNzY3ZS00MjU1LWJlZWMtMDlmMmFiNGQ0MDZk_sage_brain_zoom.gif?auto=compress,format"
-                  loading="lazy"
-                  sizes="80vw"
-                  alt="wolff olins placeholder image"
+                <img src="./img/cover-section-organism.png" alt="Pentagram-Saturday Night Live"
                 />
               </div>
               <div class="cover-section__contents">
                 <a href="#!">
                   <h2 class="section-heading">
-                    Sage Therapeutics
+                    Saturday Nigh Live
                   </h2>
-                  <p>Pioneering a new way of approaching brain health</p>
+                  <p>Saturday Night Live Season 46<br><br>Opening title sequence for the 2020-2021 season</p>
                   <span class="action-link">
                     <span class="visually-hidden">Read More</span>
                   </span>
@@ -344,8 +326,8 @@
           <h3 class="component__name">.cover-section__contents</h3>
           <div class="component__img">
             <img
-              srcset="./img/cover-section__contents@2x.png 2x"
-              src="./img/cover-section__contents@2x.png"
+              srcset="./img/cover-section-molecule.png"
+              src="./img/cover-section-molecule.png"
               alt="cover section contents"
             />
           </div>
@@ -353,9 +335,9 @@
             <div class="cover-section__contents">
               <a href="#!">
                 <h2 class="section-heading">
-                  Google
+                  Saturday Night Live
                 </h2>
-                <p>Nine years of collaboration</p>
+                <p>Saturday Night Live Season 46<br>Opening title sequence for the 2020-2021 season</p>
                 <span class="action-link">
                   <span class="visually-hidden">Read More</span>
                 </span>
@@ -364,7 +346,7 @@
           </div>
         </article>
 
-        <article id="cover-section--light" class="component component--is-done">
+       <!-- <article id="cover-section--light" class="component component--is-done">
           <h3 class="component__name">.cover-section .cover-section--light</h3>
           <div class="component__img">
             <img
@@ -394,7 +376,7 @@
                   </span>
                 </a>
               </div>
-            </article>
+            </article>-->
           </div>
         </article>
 
@@ -402,8 +384,8 @@
           <h3 class="component__name">.cover-section .cover-section--hero</h3>
           <div class="component__img">
             <img
-              srcset="./img/cover-section--hero@2x.png 2x"
-              src="./img/cover-section--hero@2x.png"
+              srcset="./img/cover-section-organism.png"
+              src="./img/cover-section-organism.png"
               alt="cover section - hero style"
             />
           </div>
@@ -411,13 +393,11 @@
             <article class="cover-section cover-section--hero">
               <div class="cover-section__feature-media">
                 <p>
-                  We help create transformative brands that move businesses,
-                  people and the world forward
                 </p>
               </div>
               <div class="cover-section__contents">
                 <a href="#!" class="action-link">
-                  Play Showreel
+                  Saturday Night Live Season 46<br>Opening title sequence for the 2020-2021 season
                 </a>
               </div>
             </article>
@@ -433,18 +413,18 @@
           <h3 class="component__name">.page-footer</h3>
           <div class="component__img">
             <img
-              srcset="./img/page-footer@2x.png 2x"
-              src="./img/page-footer@2x.png"
+              srcset="./img/page-footer-organism.png"
+              src="./img/page-footer-organism.png"
               alt="page footer"
             />
           </div>
           <div class="component__code">
             <footer class="page-footer">
-              <h2 class="page-footer__heading">Wolff Olins</h2>
+              <h2 class="page-footer__heading">© 1972-2021 Pentagram</h2>
               <div class="page-footer__links">
-                <p><a href="#!">Cookie Policy</a></p>
-                <p><a href="#!">Legal Information</a></p>
-                <ul class="social-list">
+                <p><a href="#!">Privacy Policy</a></p>
+                <p><a href="#!">Subscribe to our Newsletter</a></p>
+          <!--   <ul class="social-list">
                   <li>
                     <a href="#!" class="icon--circle"
                       ><i class="fab fa-instagram"></i
@@ -465,7 +445,7 @@
                       ><i class="fab fa-linkedin-in"></i
                     ></a>
                   </li>
-                </ul>
+                </ul>--> 
               </div>
             </footer>
           </div>
@@ -474,34 +454,17 @@
           <h3 class="component__name">.social-list</h3>
           <div class="component__img">
             <img
-              srcset="./img/social-list@2x.png 2x"
-              src="./img/social-list@2x.png"
+              srcset="./img/page-footer-molecule-social.png"
+              src="./img/page-footer-molecule-social.png"
               alt="social list"
             />
           </div>
-          <div class="component__code">
-            <ul class="social-list">
-              <li>
-                <a href="#!" class="icon--circle"
-                  ><i class="fab fa-instagram"></i
-                ></a>
-              </li>
-              <li>
-                <a href="#!" class="icon--circle"
-                  ><i class="fab fa-twitter"></i
-                ></a>
-              </li>
-              <li>
-                <a href="#!" class="icon--circle"
-                  ><i class="fab fa-facebook-f"></i
-                ></a>
-              </li>
-              <li>
-                <a href="#!" class="icon--circle"
-                  ><i class="fab fa-linkedin-in"></i
-                ></a>
-              </li>
-            </ul>
+         <div class="component__code">
+           <ul class="social-list">
+            <li><a href="#!">Instagram</a></li>
+            <li><a href="#!">Twitter</a></li>
+            <li><a href="#!">Facebook</a></li>
+          </ul>
           </div>
         </article>
       </section>
