--- a/components:index.html
+++ b/components:index.html
@@ -154,7 +154,7 @@
           </div>
         </article>
 
-        <article id="nav-toggle" class="component component--is-done">
+      <!--  <article id="nav-toggle" class="component component--is-done">
           <h3 class="component__name">.nav-toggle</h3>
 
           <div class="component__img">
@@ -167,7 +167,7 @@
           <div class="component__code">
             <a href="#!" class="nav-toggle">1</a>
           </div>
-        </article>
+        </article> -->
 
         <article id="section-heading" class="component component--is-done">
           <h3 class="component__name">.section-heading</h3>
