--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Pentagram – The world's largest Independent design consultancy</title>
 </head>
 <body>
-    <div class="header">
+    <header class="header">
         <div class="header-logo">
             <a href="https://www.pentagram.com"><img src="img/Pentagram-logo2.jpg" alt="logo"></a>
         </div>
@@ -22,7 +22,7 @@
             <li><a href="#!">contact</a></li>
             <li><a href="#!"><i class="fas fa-search"></i></a></li>
         </ul>
-    </div>
+    </header>
     <div class="wrapper-container">
         <div class="wrapper">
             <div class="box1">One</div>
