--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="header-logo">
-            <a href="https://www.pentagram.com"><img src="img/Pentagram-logo2.jpg" alt="logo"></a>
+            <a href="https://www.pentagram.com"><img src="img/Pentagram-logo2.png" alt="logo"></a>
         </div>
         <ul class="header_nav">
             <li><a href="#!">work</a></li>
@@ -23,6 +23,9 @@
             <li><a href="#!"><i class="fas fa-search"></i></a></li>
         </ul>
     </header>
+    <div class="cover-section--hero">
+        <div class="cover-section__feature-media">Saturday Night Live Season 46</div>
+    </div>
     <div class="wrapper-container">
         <div class="wrapper">
             <div class="box1">One</div>
@@ -30,7 +33,6 @@
             <div class="box3">Three</div>
             <div class="box4">Four</div>
             <div class="box5">Five</div>
-            <div class="box6">Five</div>
         </div>
     </div>
 </body>
