--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-logo">
+        <div class="wordmark">
             <a href="https://www.pentagram.com"><img src="img/Pentagram-logo2.png" alt="logo"></a>
         </div>
         <ul class="header_nav">
@@ -28,7 +28,10 @@
     </div>
     <div class="wrapper-container">
         <div class="wrapper">
-            <div class="box1">One</div>
+            <div class="box1"><img src="img/getronics.png" alt="Getronics">
+                <figure class="caption"><figcaption>Brand identity for an end-to-end digital transformation partner.</figcaption>
+                </figure>
+            </div>
             <div class="box2">Two</div>
             <div class="box3">Three</div>
             <div class="box4">Four</div>
