--- a/components:index.html
+++ b/components:index.html
@@ -172,8 +172,7 @@
         <article id="section-heading" class="component component--is-done">
           <h3 class="component__name">.section-heading</h3>
           <div class="component__img">
-            <img
-              srcset="./img/case-study-section-contents.png" alt="section heading">
+            <img srcset="./img/case-study-section-contents.png" alt="section heading">
           </div>
           <div class="component__code">
             <h2 class="section-heading">
@@ -221,8 +220,7 @@
         <article class="component component--is-done">
           <h3 class="component__name">.page-header</h3>
           <div class="component__img">
-            <img
-              srcset="./img/header-organism.png"
+            <img srcset="./img/header-organism.png"
               alt="page header"
             />
           </div>
@@ -370,9 +368,9 @@
                   </span>
                 </a>
               </div>
-            </article>-->
+            </article>
           </div>
-        </article>
+        </article>-->
 
         <article id="cover-section--hero" class="component component--is-done">
           <h3 class="component__name">.cover-section .cover-section--hero</h3>
