--- a/index.html
+++ b/index.html
@@ -38,5 +38,18 @@
             <div class="box5">Five</div>
         </div>
     </div>
+    <footer>
+        <h3 class="view-all"><a href="https://www.pentagram.com/work/archive">View All Projects</a></h3>
+    <ul class="social-list">
+        <li><a href="#!">© 1972 – 2021 Pentagram</a></li>
+        <li><a href="#!">Instagram</a></li>
+        <li><a href="#!">Twitter</a></li>
+        <li><a href="#!">Facebook</a></li>
+    </ul>
+    <ul class="social-list">
+        <li><a href="https://www.pentagram.com/privacypolicy">Privacy Policy</a></li>
+        <li><a href="#!"> Subscribe to our Newsletter</a></li>
+    </ul>
+    </footer>
 </body>
 </html>
