--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <title>Pentagram – The world's largest Independent design consultancy</title>
 </head>
 <body>
-    <header class="header">
+    <header class="home-page__header">
         <div class="wordmark">
             <a href="https://www.pentagram.com"><img src="img/Pentagram-logo2.png" alt="logo"></a>
-        </div>
         <ul class="header_nav">
             <li><a href="#!">work</a></li>
             <li><a href="#!">about</a></li>
@@ -22,31 +21,42 @@
             <li><a href="#!">contact</a></li>
             <li><a href="#!"><i class="fas fa-search"></i></a></li>
         </ul>
+        </div>
     </header>
     <div class="cover-section--hero">
+        <img src="img/cover-section-organism.jpg">
         <div class="cover-section__feature-media">Saturday Night Live Season 46</div>
     </div>
+    <section class="portfolio-container">
     <div class="wrapper-container">
         <div class="wrapper">
             <div class="box1"><img src="img/getronics.png" alt="Getronics">
-                <figure class="caption"><figcaption>Brand identity for an end-to-end digital transformation partner.</figcaption>
-                </figure>
+                <div class="workFeatureItem__title">
+                    <h4 class="typo--listingTitle">Getronics</h4>
+                    <p class="workFeatureItem__tagline">Brand identity for an end-to-end digital transformation partner.</p>
+                  </div>
             </div>
-            <div class="box2">Two</div>
-            <div class="box3">Three</div>
-            <div class="box4">Four</div>
-            <div class="box5">Five</div>
+            <div class="box2"><img src="img/400-sm-item.jpg" alt="sample"></div>
+            <div class="box3"><img src="img/400-sm-item.jpg" alt="sample"></div>
+            <div class="box4"><img src="img/400-sm-item.jpg" alt="sample"></div>
+            <div class="box5"><img src="img/400-sm-item.jpg" alt="sample"></div>
         </div>
     </div>
+    </section>
     <footer>
         <h3 class="view-all"><a href="https://www.pentagram.com/work/archive">View All Projects</a></h3>
-    <ul class="social-list">
-        <li><a href="#!">© 1972 – 2021 Pentagram</a></li>
-        <li><a href="#!">Instagram</a></li>
-        <li><a href="#!">Twitter</a></li>
-        <li><a href="#!">Facebook</a></li>
-    </ul>
-    <ul class="social-list">
+        <div class="copyright__container">
+            <a href="#!">© 1972 – 2021 Pentagram</a>
+
+        <div class="social-list__container">
+        <ul class="social-list">
+            <li><a href="#!">Instagram</a></li>
+            <li><a href="#!">Twitter</a></li>
+            <li><a href="#!">Facebook</a></li>
+        </ul>
+        </div>
+    </div>
+    <ul class="legal-item">
         <li><a href="https://www.pentagram.com/privacypolicy">Privacy Policy</a></li>
         <li><a href="#!"> Subscribe to our Newsletter</a></li>
     </ul>
