--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     <section class="portfolio-container">
     <div class="wrapper-container">
         <div class="wrapper">
-            <div class="box1"><img src="images/HP_BBR_Perspectives_Series_lineup.jpg" alt="The Perspective Series">
+            <div class="box1"><img src="img/HP_BBR_Perspectives_Series_lineup.jpg" alt="The Perspective Series">
                 <div class="workFeatureItem__title">
                     <h4 class="typo--listingTitle">The Perspective Series</h4>
                   </div>
             </div>
-            <div class="box2"><img src="images/GL_PlasticAir_00.jpg.webp" alt="sample">Plastic Air</div>
-            <div class="box3"><img src="images/AH_Getronics_FG.png.webp" alt="sample">Getronics</div>
-            <div class="box4"><img src="images/YS_Hanedavideo_thumbnail.jpg.webp" alt="sample">'Crowd Cloud'</div>
-            <div class="box5"><img src="images/JO_Realspace_08.jpg.webp" alt="sample">Realspace</div>
+            <div class="box2"><img src="img/GL_PlasticAir_00.jpg.webp" alt="sample">Plastic Air</div>
+            <div class="box3"><img src="img/AH_Getronics_FG.png.webp" alt="sample">Getronics</div>
+            <div class="box4"><img src="img/YS_Hanedavideo_thumbnail.jpg.webp" alt="sample">'Crowd Cloud'</div>
+            <div class="box5"><img src="img/JO_Realspace_08.jpg.webp" alt="sample">Realspace</div>
         </div>
     </div>
     </section>
