--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <div class="cover-section__feature-media">Saturday Night Live Season 46</div>
     </div>
     <section class="portfolio-container">
+<!--Set 1-->
     <div class="wrapper-container">
-        <div class="wrapper">
+        <div class="wrapper1">
             <div class="box1"><img src="img/HP_BBR_Perspectives_Series_lineup.jpg" alt="The Perspective Series">
                 <div class="workFeatureItem__title">
                     <h4 class="typo--listingTitle">The Perspective Series</h4>
@@ -40,6 +41,69 @@
             <div class="box4"><img src="img/YS_Hanedavideo_thumbnail.jpg.webp" alt="sample">'Crowd Cloud'</div>
             <div class="box5"><img src="img/JO_Realspace_08.jpg.webp" alt="sample">Realspace</div>
         </div>
+    </div>
+    <div class="wrapper-container">
+        <div class="wrapper2">
+            <div class="box6"><img src="img/PS_NWHM_01.jpg.webp" alt="National Women's History Museum">
+                <div class="workFeatureItem__title">
+                    <h4 class="typo--listingTitle">National Women's History Museum</h4>
+                  </div>
+            </div>
+            <div class="box7"><img src="img/01_FedrigoniOffice_3000x1870_01.png.webp" alt="sample">Fedrigoni</div>
+            <div class="box8"><img src="img/ah_williammorris_02.jpg.webp" alt="sample">The William Morris Society</div>
+            <div class="box9"><img src="img/am_barnesfoundation_01.jpg.webp" alt="sample">The Barnes Foundation</div>
+            <div class="box10"><img src="img/djs_wwfmagazine_01.jpg.webp" alt="sample">World Wildlife Magazine</div>
+        </div>
+    </div>
+<!--Set 2-->
+    <div class="wrapper1">
+        <div class="box1"><img src="img/dl_ldf16_01.jpg.webp" alt="London Design Festival 2020">
+            <div class="workFeatureItem__title">
+                <h4 class="typo--listingTitle">London Design Festival 2020</h4>
+              </div>
+        </div>
+        <div class="box2"><img src="img/emo_fantasticbeasts_01.jpg.webp" alt="sample">'Fantastic Beasts: The Crimes of Grindelwald'</div>
+        <div class="box3"><img src="img/eo-platform-013.jpg.webp" alt="sample">EO Platform</div>
+        <div class="box4"><img src="img/gl_starbucks_04.jpg.webp" alt="sample">Starbucks</div>
+        <div class="box5"><img src="img/HP_01_Pentagram_Art_Museum_Case_Study_1280x800.jpg.webp" alt="sample">'The Art Museum in Modern Times'</div>
+    </div>
+<div class="wrapper-container">
+    <div class="wrapper2">
+        <div class="box6"><img src="img/hp_theoldvic_15.jpg.webp" alt="The Old Vic at 200">
+            <div class="workFeatureItem__title">
+                <h4 class="typo--listingTitle">'The Old Vic at 200'</h4>
+              </div>
+        </div>
+        <div class="box7"><img src="img/jhp_lp_graphcore_01.jpg.webp" alt="sample">Graphcore</div>
+        <div class="box8"><img src="img/jr_bertazzoni_01.jpg.webp" alt="sample">Bertazzoni</div>
+        <div class="box9"><img src="img/lh_mastercard_01.jpg.webp" alt="sample">Mastercard</div>
+        <div class="box10"><img src="img/mb_mitmedialab_02.jpg.webp" alt="sample">MIT Media Lab</div>
+    </div>
+</div>
+<!--Set 3-->
+    <div class="wrapper1">
+        <div class="box1"><img src="img/MB_SDZ_04.jpg.webp" alt="San Diego Zoo Wildlife Alliance">
+            <div class="workFeatureItem__title">
+                <h4 class="typo--listingTitle">San Diego Zoo Wildlife Alliance</h4>
+            </div>
+        </div>
+        <div class="box2"><img src="img/mg_arizonacardinals_01.jpg.webp" alt="sample">University of Phoenix Stadium</div>
+        <div class="box3"><img src="img/nj_teabox_01.jpg.webp" alt="sample">Teabox</div>
+        <div class="box4"><img src="img/nr_posterpower_01.jpg.webp" alt="sample">Poster Power at Uniqlo Tate Lates</div>
+        <div class="box5"><img src="img/nrmw_battersea_00.gif.mp4" alt="sample">Battersea</div>
+    </div>
+    <div class="wrapper-container">
+    <div class="wrapper2">
+        <div class="box6"><img src="img/ps_shakeshack_01.jpg.webp" alt="Shake Shack">
+            <div class="workFeatureItem__title">
+                <h4 class="typo--listingTitle">Shake Shack</h4>
+            </div>
+        </div>
+        <div class="box7"><img src="img/resonate-05.jpg.webp" alt="sample">Resonate</div>
+        <div class="box8"><img src="img/ys_sharevari_04.webp" alt="sample">'Sharevari' for Swarovski</div>
+        <div class="box9"><img src="img/ah_mulberry_01.jpg.webp" alt="sample">Mulberry</div>
+        <div class="box10"><img src="img/mb_saksfifthavenue_06.jpg.webp" alt="sample">Saks Fifth Avenue</div>
+    </div>
     </div>
     </section>
     <footer>
