--- a/components:index.html
+++ b/components:index.html
@@ -293,7 +293,7 @@
           <div class="component__code">
             <article class="cover-section">
               <div class="cover-section__feature-media">
-                <img src="./img/cover-section-organism.png" alt="Pentagram-Saturday Night Live"
+                <img src="img/cover-section-organism.jpg" alt="Pentagram-Saturday Night Live"
                 />
               </div>
               <div class="cover-section__contents">
