--- a/components:index.html
+++ b/components:index.html
@@ -299,7 +299,7 @@
               <div class="cover-section__contents">
                 <a href="#!">
                   <h2 class="section-heading">
-                    Saturday Nigh Live
+                    Saturday Night Live
                   </h2>
                   <p>Saturday Night Live Season 46<br><br>Opening title sequence for the 2020-2021 season</p>
                   <span class="action-link">
