--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
     </div>
 <!--Set 2-->
+<div class="wrapper-container">
     <div class="wrapper1">
         <div class="box1"><img src="img/dl_ldf16_01.jpg.webp" alt="London Design Festival 2020">
             <div class="workFeatureItem__title">
@@ -67,6 +68,7 @@
         <div class="box4"><img src="img/gl_starbucks_04.jpg.webp" alt="sample">Starbucks</div>
         <div class="box5"><img src="img/HP_01_Pentagram_Art_Museum_Case_Study_1280x800.jpg.webp" alt="sample">'The Art Museum in Modern Times'</div>
     </div>
+</div>
 <div class="wrapper-container">
     <div class="wrapper2">
         <div class="box6"><img src="img/hp_theoldvic_15.jpg.webp" alt="The Old Vic at 200">
@@ -81,6 +83,7 @@
     </div>
 </div>
 <!--Set 3-->
+<div class="wrapper-container">
     <div class="wrapper1">
         <div class="box1"><img src="img/MB_SDZ_04.jpg.webp" alt="San Diego Zoo Wildlife Alliance">
             <div class="workFeatureItem__title">
@@ -92,6 +95,7 @@
         <div class="box4"><img src="img/nr_posterpower_01.jpg.webp" alt="sample">Poster Power at Uniqlo Tate Lates</div>
         <div class="box5"><img src="img/nrmw_battersea_00.gif.mp4" alt="sample">Battersea</div>
     </div>
+</div>
     <div class="wrapper-container">
     <div class="wrapper2">
         <div class="box6"><img src="img/ps_shakeshack_01.jpg.webp" alt="Shake Shack">
